# ilixi

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  configure.ac  ilixi.pc.in
apps/: Makefile.am
apps/cairo/: CairoClock.cpp  CairoClock.h  CairoDemo.cpp  CairoDemo.h  Makefile.am
apps/calc/: Calc.cpp  Calc.h  Makefile.am  Node.cpp  Node.h  NumNode.cpp  NumNode.h  OpNode.cpp  OpNode.h  Pair.cpp  Pair.h  Parser.cpp  Parser.h  UnaryNode.cpp  UnaryNode.h  Util.cpp  Util.h
apps/car/: Makefile.am
apps/carousel/: CarouselDemo.cpp  CarouselDemo.h  Makefile.am
apps/demo2/: Demo2.cpp  Demo2.h  Makefile.am  ScrollItem.cpp
apps/demo4/: Demo4.cpp  Demo4.h  ImageDialog.cpp  Makefile.am  MenuItem.cpp  VKMenu.cpp  VKMenu.h
apps/egl/: GLDemo.cpp  GLDemo.h  GLTri.cpp  GLTri.h  Makefile.am  es2gears.h  es2tri.h
apps/gallery/: Gallery.cpp  Gallery.h  ImageDialog.cpp  ImageDialog.h  Makefile.am
apps/gestures/: GestureDemo.cpp  GestureDemo.h  Makefile.am
apps/monitor/: BarChart.cpp  CPUMonitor.cpp  CPUMonitor.h  MEMMonitor.cpp  MEMMonitor.h  Makefile.am  Monitor.cpp  Monitor.h  NETMonitor.cpp  OSMonitor.cpp
apps/navigation/: Makefile.am  Navigation.cpp
apps/osk/: Key.cpp  Key.h  Keyboard.cpp  Keyboard.h  Makefile.am  OSK.cpp  OSK.h  Row.h  keyboard.dtd  keyboard.xml  numpad.xml  osk-alpha.xml  osk-numeric.xml  osk-standard.xml  osk-url.xml  utf8-decoder.cpp  utf8-decoder.h
apps/phone/: Makefile.am
apps/player/: Makefile.am  Player.cpp  Player.h
apps/settings/: Makefile.am  Settings.cpp  Settings.h
apps/sip/: App.cpp  App.h  Call.cpp  Call.h  Contact.cpp  Contact.h  ContactManager.cpp  ContactManager.h  Contacts.cpp  Contacts.h  Dialer.cpp  Dialer.h  History.cpp  History.h  HistoryItem.cpp  HistoryItem.h  Makefile.am  Settings.cpp  Settings.h  Status.cpp  Status.h
apps/soundmixer/: BandSlider.cpp  BandSlider.h  Makefile.am  SoundMixer.cpp  SoundMixer.h
apps/stacking/: Makefile.am  Stacker.cpp  Stacker.h
apps/widgets/: Makefile.am  WidgetsDemo.cpp  WidgetsDemo.h
build-android/: Makefile.am  README  ilixi-env.mk  ilixi.mk  prepare.sh  sigc++config.h
build-android/common_files/: Application.mk
build-android/ilixi/: ilixiConfig.h
build-android/ilixi_calc/: AndroidManifest.xml
build-android/ilixi_widgets/: AndroidManifest.xml
data/: Makefile.am  application.dtd  compositor.dtd  compositor.xml  configuration.dtd  def_palette.xml  def_style.xml  font_pack.dtd  icon_pack.dtd  ilixi_catalog.xml  ilixi_catalog.xml.in  ilixi_config.xml  image_pack.dtd  palette.dtd  style.dtd
data/apps/: 8tracks.appdef  Makefile.am  application.dtd  bbc.appdef  clanbomber.appdef  dashboard.appdef  dfbterm.appdef  facebook.appdef  fire.appdef  gallery.appdef  gears.appdef  google.appdef  googlemaps.appdef  googleplus.appdef  ilixi_WebKit.appdef  ilixi_animatedtiles.appdef  ilixi_animations.appdef  ilixi_calc.appdef  ilixi_egl.appdef  ilixi_gallery.appdef  ilixi_gestures.appdef  ilixi_home.appdef  ilixi_monitor.appdef  ilixi_player.appdef  ilixi_settings.appdef  ilixi_widgets.appdef  input.appdef  knuckles.appdef  lite_web.appdef  matrix.appdef  navit.appdef  neo.appdef  osk.appdef  particle.appdef  penguins.appdef  qt_affine.appdef  qt_animatedtiles.appdef  qt_textedit.appdef  soundmixer.appdef  statusbar.appdef  (+4 more)
data/fonts/: Armata-OFL.txt  Makefile.am
data/images/: Makefile.am
data/sounds/: Makefile.am
data/themes/: Makefile.am  README-themes
examples/: Makefile.am  animatedtiles.cpp  buttons.cpp  containers.cpp  dialogs.cpp  hello_world.cpp  signals.cpp
examples/animations/: Animations.cpp  Animations.h  Makefile.am  Spiral.cpp  Spiral.h
ilixi/: Makefile.am  doxygen.dox  gccxml.make  ilixiConfig.h.in  ilixiGUI.h
ilixi/compositor/: AppCompositor.cpp  AppCompositor.h  AppInfo.cpp  AppInfo.h  AppInstance.cpp  AppInstance.h  AppThumbnail.cpp  AppThumbnail.h  AppView.cpp  AppView.h  ApplicationManager.cpp  ApplicationManager.h  Compositor.cpp  Compositor.h  CompositorComponent.cpp  CompositorComponent.h  Makefile.am  MemoryMonitor.cpp  MemoryMonitor.h  Notification.cpp  Notification.h  NotificationManager.cpp  NotificationManager.h  OSKComponent.cpp  OSKComponent.h  SoundComponent.cpp  SoundComponent.h  Switcher.cpp  Switcher.h
ilixi/core/: AppBase.cpp  AppBase.h  Application.cpp  Application.h  Callback.cpp  Callback.h  ComaComponent.cpp  ComaComponent.h  ComponentData.h  DaleDFB.cpp  DaleDFB.h  Engine.cpp  Engine.h  EventFilter.cpp  EventFilter.h  EventManager.cpp  EventManager.h  IFusion.cpp  IFusion.h  Logger.cpp  Logger.h  Makefile.am  PlatformManager.cpp  PlatformManager.h  Service.cpp  Service.h  SoundDFB.cpp  SoundDFB.h  SurfaceEventListener.cpp  SurfaceEventListener.h  Thread.cpp  Thread.h  Util.h  Window.cpp  Window.h
ilixi/graphics/: CairoPainter.cpp  CairoPainter.h  FontPack.cpp  FontPack.h  IconPack.cpp  IconPack.h  ImagePack.cpp  ImagePack.h  Makefile.am  Painter.cpp  Painter.h  Palette.cpp  Palette.h  S9Stylist.cpp  S9Stylist.h  Style.cpp  Style.h  StyleUtil.cpp  StyleUtil.h  Stylist.cpp  Stylist.h  StylistBase.cpp  StylistBase.h  Surface.cpp  Surface.h
ilixi/lib/: Animation.cpp  Animation.h  AnimationSequence.cpp  AnimationSequence.h  Clipboard.cpp  Clipboard.h  DragHelper.cpp  DragHelper.h  Easing.cpp  Easing.h  FPSCalculator.cpp  FPSCalculator.h  FileInfo.cpp  FileInfo.h  FileSystem.cpp  FileSystem.h  Gesture.cpp  Gesture.h  InputHelper.cpp  InputHelper.h  InputHelperJP.cpp  InputHelperJP.h  Makefile.am  Notify.cpp  Notify.h  Sound.cpp  Sound.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  Tween.cpp  Tween.h  TweenAnimation.cpp  TweenAnimation.h  Util.cpp  Util.h  XMLReader.cpp  XMLReader.h  utf8.c
ilixi/types/: Affine2D.cpp  Affine2D.h  BoxLayout.cpp  BoxLayout.h  Brush.cpp  Brush.h  Color.cpp  Color.h  Enums.h  Event.cpp  Event.h  Font.cpp  Font.h  FontCache.cpp  FontCache.h  Gradient.cpp  Gradient.h  I18NBase.cpp  I18NBase.h  Image.cpp  Image.h  LinearGradient.cpp  LinearGradient.h  Makefile.am  Margin.cpp  Margin.h  Music.cpp  Music.h  Pen.cpp  Pen.h  Point.cpp  Point.h  RadialGradient.cpp  RadioGroup.h  (+14 more)
(+203 files in other folders)
