## Makefile.am for apps/
SUBDIRS = calc gallery demo2 demo4 carousel player stacking monitor widgets

if WITH_FUSIONDALE

if WITH_BARESIP
SUBDIRS += sip
endif

if WITH_SAWMAN
SUBDIRS += osk settings car phone
endif

if WITH_FUSIONSOUND
SUBDIRS += soundmixer
endif

endif # end WITH_FUSIONDALE

#if WITH_REFLEX
#SUBDIRS += meta-demo
#endif
