EXTRA_DIST = \
ilixi_widgets/src/README \
ilixi_widgets/jni/Android.mk \
ilixi_widgets/jni/Application.mk \
ilixi_widgets/AndroidManifest.xml \
ilixi_widgets/prepare.sh \
ilixi_widgets/res/drawable/icon.png \
ilixi_widgets/res/values/strings.xml \
ilixi_calc/src/README \
ilixi_calc/jni/Android.mk \
ilixi_calc/jni/Application.mk \
ilixi_calc/AndroidManifest.xml \
ilixi_calc/prepare.sh \
ilixi_calc/res/drawable/icon.png \
ilixi_calc/res/values/strings.xml \
common_files/Application.mk \
common_files/prepare.sh \
common_files/icon.png \
ilixi-env.mk \
ilixi.mk \
directfb_build.h \
prepare.sh \
sigc++config.h \
libxml/xmlversion.h \
README
