## Makefile.am for data
SUBDIRS			= 	apps images
miscdatadir 	=	$(ILIXI_DATADIR)
miscdata_DATA 	=	application.dtd \
					configuration.dtd \
					def_palette.xml \
					def_style.xml \
					palette.dtd \
					style.dtd \
					ilixi_catalog.xml \
					ilixi_config.xml
			
EXTRA_DIST 		= 	$(miscdata_DATA)
